test/libyul/yulSyntaxTests/invalid/dup_disallowed.yul
{
    dup0()
    dup1()
    dup2()
    dup3()
    dup4()
    dup5()
    dup6()
    dup7()
    dup8()
    dup9()
    dup10()
    dup11()
    dup12()
    dup13()
    dup14()
    dup15()
    dup16()
    dup32()
}
// ----
// DeclarationError 4619: (6-10='dup0'): Function "dup0" not found.
// DeclarationError 4619: (17-21='dup1'): Function "dup1" not found.
// DeclarationError 4619: (28-32='dup2'): Function "dup2" not found.
// DeclarationError 4619: (39-43='dup3'): Function "dup3" not found.
// DeclarationError 4619: (50-54='dup4'): Function "dup4" not found.
// DeclarationError 4619: (61-65='dup5'): Function "dup5" not found.
// DeclarationError 4619: (72-76='dup6'): Function "dup6" not found.
// DeclarationError 4619: (83-87='dup7'): Function "dup7" not found.
// DeclarationError 4619: (94-98='dup8'): Function "dup8" not found.
// DeclarationError 4619: (105-109='dup9'): Function "dup9" not found.
// DeclarationError 4619: (116-121='dup10'): Function "dup10" not found.
// DeclarationError 4619: (128-133='dup11'): Function "dup11" not found.
// DeclarationError 4619: (140-145='dup12'): Function "dup12" not found.
// DeclarationError 4619: (152-157='dup13'): Function "dup13" not found.
// DeclarationError 4619: (164-169='dup14'): Function "dup14" not found.
// DeclarationError 4619: (176-181='dup15'): Function "dup15" not found.
// DeclarationError 4619: (188-193='dup16'): Function "dup16" not found.
// DeclarationError 4619: (200-205='dup32'): Function "dup32" not found.
